Several functional and non-functional improvements (see notes)
  * Notes:

    * '.config/vcsh/gitmodules/config':

      * Support new environment variable 'VCSH_MODULES_SOURCEPATH':

        * Use it if previously set;

        * Calculate it (no directory candidates have been added yet);

        * Improved check to determine if a candidate directory is a
          suitable value for 'VCSH_MODULES_SOURCEPATH';

      * Improved 'GIT_EXEC_PATH' environment variable handling.
        Currently sets these non-git(1) variables:

        * 'GIT_EXEC_PATH_ORIG';

        * 'GIT_EXEC_PATH_DEFDIR':

          * Makes sure that there is indeed a 'git-submodule' program in
            the candidate directory value for 'GIT_EXEC_PATH_DEFDIR'.

      * 'VCSH_MODULES_PATH': minor improvements;

      * Improved: removed 'bash(1)'-isms ("bashisms");

      * Fixed: removed "executable" bit (this file should be "sourced",
        by the shell not run as a separate process);

      * Minor: removed "hashbang" line, as it was misleading (this is
        not an executable program meant to be run in its own process).

    * '.config/vcsh/gitmodules/git-sh-setup':

      * Fixed/improved: use 'GIT_EXEC_PATH_DEFDIR', which is guaranteed
        to be a single directory, instead of 'GIT_EXEC_PATH_ORIG', which
        would not work as expected, if 'GIT_EXEC_PATH' had more than one
        entry when the 'config' file was parsed.

      * Fixed: propagate error from the original 'git-sh-setup' script;

      * Improved: removed 'bash(1)'-isms ("bashisms");

      * Minor: removed "hashbang" line, as it was misleading (this is
        not an executable program meant to be run in its own process).

    * '.config/vcsh/gitmodules/git-submodule':

      * Fixed: propagate error from the original 'git-submodule(1)'
        program execution;

      * Fixed: do not leave a repo-specific '.gitmodules' file
        ('${VCSH_MODULES_PATH}/${VCSH_REPO_NAME}') in the filesystem if
        the 'gi

--- a/.config/vcsh/gitmodules/config
+++ b/.config/vcsh/gitmodules/config
@@ -1,15 +1,74 @@
-#!/bin/bash
+
+f_vcsh_gitmodules_is_vcsh_gm_sourcedir()
+{
+    l_vcsh_isgmsd_pathbasedir="$1" \
+        && shift \
+        && [ -n "${l_vcsh_isgmsd_pathbasedir}" ] \
+        || return 1
+
+    for l_vcsh_isgmsd_pathpost in \
+        config \
+        git-submodule \
+        # end
+    do
+        [ -n "${l_vcsh_isgmsd_pathpost}" ] || continue
+        l_vcsh_isgmsd_pathchk="${l_vcsh_isgmsd_pathbasedir}/${l_vcsh_isgmsd_pathpost}" \
+            && [ -n "${l_vcsh_isgmsd_pathchk}" -a -e "${l_vcsh_isgmsd_pathchk}" ] \
+            || return 1
+    done
+    return 0
+}
 
 if [ ! -f .gitmodules ]; then
-    EXEC_PATH="$(git --exec-path)"
-    export GIT_EXEC_PATH_ORIG="${EXEC_PATH##*:}"
-    NEWPATH="$XDG_CONFIG_HOME/vcsh/gitmodules"
-    case "$EXEC_PATH" in
-	*"${NEWPATH}:"*);;
-	*) export GIT_EXEC_PATH="$NEWPATH:$EXEC_PATH";;
+    EXEC_PATH="`git --exec-path`" \
+        && [ -n "${EXEC_PATH}" ] \
+        || return 1
+    GIT_EXEC_PATH_ORIG="${EXEC_PATH}" \
+        && [ -n "${GIT_EXEC_PATH_ORIG}" ] \
+        && export GIT_EXEC_PATH_ORIG \
+        || return 1
+    GIT_EXEC_PATH_DEFDIR="${GIT_EXEC_PATH_ORIG##*:}" \
+        && [ -n "${GIT_EXEC_PATH_DEFDIR}" -a -d "${GIT_EXEC_PATH_DEFDIR}/" ] \
+        && [ -x "${GIT_EXEC_PATH_DEFDIR}/git-submodule" ] \
+        && export GIT_EXEC_PATH_DEFDIR \
+        || return 1
+
+    if [ -z "${VCSH_MODULES_SOURCEPATH}" ] ; then
+        for t_dirname in \
+            # end
+        do
+            [ -n "${t_dirname}" ] \
+                && f_vcsh_gitmodules_is_vcsh_gm_sourcedir "${t_dirname}" \
+                || continue
+
+            VCSH_MODULES_SOURCEPATH="${t_dirname}"
+        done
+        unset t_dirname
+    else
+        f_vcsh_gitmodules_is_vcsh_gm_sourcedir "${VCSH_MODULES_SOURCEPATH}" \
+            || return 1
+    fi
+    [ -n "${VCSH_MODULES_SOURCEPATH}" ] \
+        && export VCSH_MODULES_SOURCEPATH \
+        || return 1
+
+    case ":{begin}:${EXEC_PATH}:{end}:" in
+        # matches anywhere: "*:${VCSH_MODULES_SOURCEPATH}:*" )
+        # matches only when it's the first:
+        ":{begin}:${VCSH_MODULES_SOURCEPATH}:*" )
+            : ;;
+        * )
+            GIT_EXEC_PATH="${VCSH_MODULES_SOURCEPATH}:${EXEC_PATH}"
+            export GIT_EXEC_PATH
+            ;;
     esac
-    export VCSH_MODULES_PATH="${VCSH_MODULES_PATH:-"${VCSH_BASE:-$HOME}/.gitmodules.d"}"
-    [ -d "${VCSH_MODULES_PATH}" ] || mkdir -p "${VCSH_MODULES_PATH}"
+
+    VCSH_MODULES_PATH="${VCSH_MODULES_PATH:-${VCSH_BASE:-$HOME}/.gitmodules.d}" \
+        && [ -n "${VCSH_MODULES_PATH}" ] \
+        && export VCSH_MODULES_PATH \
+        || return 1
+    [ -d "${VCSH_MODULES_PATH}/" ] || mkdir -p "${VCSH_MODULES_PATH}" \
+        || return 1
 fi
 
 # vim600: set filetype=sh fileformat=unix softtabstop=4:
