Change shebang to /usr/bin/env bash
More robust. NixOS compatibility. Closes #9

(cherry picked from commit f0f8af531f83f1a5221e0d67b0a32af800036b45)

--- a/.config/vcsh/gitmodules/config
+++ b/.config/vcsh/gitmodules/config
@@ -1,3 +1,4 @@
+# MAYBE: (from merged upstream/master) # NOTE: this file is sourced, not executed: #!/usr/bin/env bash
 
 f_vcsh_gitmodules_is_vcsh_gm_sourcedir()
 {
