.config/vcsh/config: Improved: show error message if '. "$XDG_CONFIG_HOME/vcsh/gitmodules/config"' failed

--- a/.config/vcsh/config
+++ b/.config/vcsh/config
@@ -3,6 +3,11 @@
 : ${XDG_CONFIG_HOME:="$HOME/.config"}
 
 . "$XDG_CONFIG_HOME/vcsh/gitmodules/config"
+t_rc=$?
+[ ${t_rc} -eq 0 ] \
+    || echo "[vcsh-modules] sourcing '$XDG_CONFIG_HOME/vcsh/gitmodules/config' failed. return_code=${t_rc}." 1>&2
+# propagate return code
+[ ${t_rc} -eq 0 ]
 
 # vim600: set filetype=sh fileformat=unix softtabstop=4:
 # vim: set expandtab smarttab:
