[...]/gitmodules/config: Improved: 'VCSH_MODULES_SOURCEPATH': added bash-specific probing value (use '$BASH_SOURCE')

--- a/.config/vcsh/gitmodules/config
+++ b/.config/vcsh/gitmodules/config
@@ -36,6 +36,7 @@ if [ ! -f .gitmodules ]; then
 
     if [ -z "${VCSH_MODULES_SOURCEPATH}" ] ; then
         for t_dirname in \
+            ${BASH_SOURCE:+"${BASH_SOURCE%/*}"} \
             ${XDG_CONFIG_HOME:+"${XDG_CONFIG_HOME}/vcsh/gitmodules"} \
             ${VCSH_BASE:+"${VCSH_BASE}/.config/vcsh/gitmodules"} \
             # end
