--- a/.config/vcsh/gitmodules/config
+++ b/.config/vcsh/gitmodules/config
@@ -24,10 +24,14 @@ if [ ! -f .gitmodules ]; then
     EXEC_PATH="`git --exec-path`" \
         && [ -n "${EXEC_PATH}" ] \
         || return 1
-    GIT_EXEC_PATH_ORIG="${EXEC_PATH}" \
-        && [ -n "${GIT_EXEC_PATH_ORIG}" ] \
-        && export GIT_EXEC_PATH_ORIG \
-        || return 1
+
+    if [ -z "${GIT_EXEC_PATH_ORIG}" ] ; then
+        GIT_EXEC_PATH_ORIG="${EXEC_PATH}" \
+            && [ -n "${GIT_EXEC_PATH_ORIG}" ] \
+            && export GIT_EXEC_PATH_ORIG \
+            || return 1
+    fi
+
     GIT_EXEC_PATH_DEFDIR="${GIT_EXEC_PATH_ORIG##*:}" \
         && [ -n "${GIT_EXEC_PATH_DEFDIR}" -a -d "${GIT_EXEC_PATH_DEFDIR}/" ] \
         && [ -x "${GIT_EXEC_PATH_DEFDIR}/git-submodule" ] \
