--- a/.config/vcsh/config
+++ b/.config/vcsh/config
@@ -3,3 +3,7 @@
 : ${XDG_CONFIG_HOME:="$HOME/.config"}
 
 source "$XDG_CONFIG_HOME/vcsh/gitmodules/config"
+
+# vim600: set filetype=sh fileformat=unix softtabstop=4:
+# vim: set expandtab smarttab:
+# vi: set autoindent shiftwidth=4:
