--- a/.config/vcsh/gitmodules/config
+++ b/.config/vcsh/gitmodules/config
@@ -11,3 +11,7 @@ if [ ! -f .gitmodules ]; then
     export VCSH_MODULES_PATH="${VCSH_MODULES_PATH:-"${VCSH_BASE:-$HOME}/.gitmodules.d"}"
     [ -d "${VCSH_MODULES_PATH}" ] || mkdir -p "${VCSH_MODULES_PATH}"
 fi
+
+# vim600: set filetype=sh fileformat=unix softtabstop=4:
+# vim: set expandtab smarttab:
+# vi: set autoindent shiftwidth=4:
