[...]/gitmodules/config: Fixed: honour priority when determining which probed value to set 'VCSH_MODULES_SOURCEPATH' to

--- a/.config/vcsh/gitmodules/config
+++ b/.config/vcsh/gitmodules/config
@@ -50,6 +50,7 @@ if [ ! -f .gitmodules ]; then
                 || continue
 
             VCSH_MODULES_SOURCEPATH="${t_dirname}"
+            break
         done
         unset t_dirname
     else
