--- a/.config/vcsh/gitmodules/config
+++ b/.config/vcsh/gitmodules/config
@@ -76,8 +76,10 @@ f_vcsh_gitmodules_run_git()
     return ${l_vcsh_gitmodules_run_git_rc}
 }
 
+# DOC: https://git-scm.com/book/en/v2/Git-Internals-Environment-Variables
 if [ ! -f .gitmodules ]; then
-    EXEC_PATH="`git --exec-path`" \
+    f_vcsh_gitmodules_run_git --capture-stdout --exec-path \
+        && EXEC_PATH="${g_gitcmd_out_stdout}" \
         && [ -n "${EXEC_PATH}" ] \
         || return 1
 
