Fixes: moved 'VCSH_MODULES_PATH' setting, ...; Improvements: several;
  * changes:

    * fixes:

      * improved handling (and resilience) of setups that don't match
        the expected setup:

        * having the 'GIT_EXEC_PATH' ('git --exec-path') including the
          directory in which the custom version of 'git-submodule'
          resides, but no other variables being set up:

          * having 'git submodule' ('git-submodule') run from a non-vcsh
            environment/command;

      * variable 'VCSH_MODULES_PATH' set in the right place now: moved
        'VCSH_MODULES_PATH' setting from '.config/vcsh/gitmodules/config'
        to '.config/vcsh/gitmodules/git-submodule' to access the git
        environment at the right time (the former file is sourced before
        setting the git environment for the chosen vcsh repository);

      * moved 'VCSH_MODULES_SOURCEPATH' setting to an earlier point in
        the code path so that common files (such as
        'vcsh-modules_git-submodule-common.sh') can be accessed
        (sourced) appropriately;

      * 'f_vcsh_submodule_run_gitsubm_orig()':

        * fixed: validate that the environment variable
          'GIT_EXEC_PATH_DEFDIR' has been set;

    * other changes/improvements:

      * improved/added new debug-level messages;

      * improved "git_work_tree" detection/calculation;

        * added more detection mechanisms;

        * improved "git_work_tree" result validation;

      * 'f_vcsh_submodule_run_gitsubm_orig()':

        * added detection of new file 'vcsh-modules_git-submodule-common.sh';

      * common code ('vcsh-modules_git-submodule-common.sh'):

        * moved to new (common) file:

          * 'f_vcsh_gitmodules_run_git()';

        * "sourced" from:

          * '.config/vcsh/gitmodules/config';

          * '.config/vcsh/gitmodules/git-submodule';

--- a/.config/vcsh/gitmodules/config
+++ b/.config/vcsh/gitmodules/config
@@ -10,6 +10,7 @@ f_vcsh_gitmodules_is_vcsh_gm_sourcedir()
     for l_vcsh_isgmsd_pathpost in \
         config \
         git-submodule \
+        vcsh-modules_git-submodule-common.sh \
         # end
     do
         [ -n "${l_vcsh_isgmsd_pathpost}" ] || continue
@@ -20,80 +21,9 @@ f_vcsh_gitmodules_is_vcsh_gm_sourcedir()
     return 0
 }
 
-# args: [OWN_OPTIONS] [--] [GIT_ARGUMENTS]
-#  OWN_OPTIONS:
-#   --capture-stdout : output variable: g_gitcmd_out_stdout
-f_vcsh_gitmodules_run_git()
-{
-    unset \
-        g_gitcmd_out_stdout \
-        \
-        l_vcsh_gitmodules_run_git_captstdout_flag \
-        # end
-    l_vcsh_gitmodules_run_git_rc=0
-
-    if [ ${l_vcsh_gitmodules_run_git_rc} -eq 0 ] ; then
-        while [ $# -gt 0 ]
-        do
-            l_vcsh_gitmodules_run_git_arg="$1"
-            case "${l_vcsh_gitmodules_run_git_arg}" in
-                --capture-stdout )
-                    l_vcsh_gitmodules_run_git_captstdout_flag=x ;;
-                -- )
-                    shift
-                    break ;;
-                * )
-                    break ;;
-            esac
-            shift
-        done
-    fi
-
-    if [ ${l_vcsh_gitmodules_run_git_rc} -eq 0 ] ; then
-        # for now, we run 'git', and not support any variable-based overrides.
-        l_vcsh_gitmodules_run_git_gitcmd='git'
-    fi
-
-    if [ ${l_vcsh_gitmodules_run_git_rc} -eq 0 ] ; then
-        if [ -n "${l_vcsh_gitmodules_run_git_captstdout_flag}" ] ; then
-            g_gitcmd_out_stdout=`"${l_vcsh_gitmodules_run_git_gitcmd}" "$@"` \
-                || {
-                    l_vcsh_gitmodules_run_git_rc=$?
-                    unset g_gitcmd_out_stdout
-                }
-        else
-            # no redirections: caller will do that, if it wants.
-            "${l_vcsh_gitmodules_run_git_gitcmd}" "$@" \
-                || l_vcsh_gitmodules_run_git_rc=$?
-        fi
-    fi
-
-    unset \
-        l_vcsh_gitmodules_run_git_arg \
-        l_vcsh_gitmodules_run_git_captstdout_flag \
-        l_vcsh_gitmodules_run_git_gitcmd \
-        # end
-    return ${l_vcsh_gitmodules_run_git_rc}
-}
-
 # DOC: https://git-scm.com/book/en/v2/Git-Internals-Environment-Variables
 if [ ! -f .gitmodules ]; then
-    f_vcsh_gitmodules_run_git --capture-stdout --exec-path \
-        && EXEC_PATH="${g_gitcmd_out_stdout}" \
-        && [ -n "${EXEC_PATH}" ] \
-        || return 1
-
-    : "${GIT_EXEC_PATH_ORIG:=${EXEC_PATH}}" \
-        && [ -n "${GIT_EXEC_PATH_ORIG}" ] \
-        && export GIT_EXEC_PATH_ORIG \
-        || return 1
-
-    : "${GIT_EXEC_PATH_DEFDIR:=${GIT_EXEC_PATH_ORIG##*:}}" \
-        && [ -n "${GIT_EXEC_PATH_DEFDIR}" -a -d "${GIT_EXEC_PATH_DEFDIR}/" ] \
-        && [ -x "${GIT_EXEC_PATH_DEFDIR}/git-submodule" ] \
-        && export GIT_EXEC_PATH_DEFDIR \
-        || return 1
-
+    # VCSH_MODULES_SOURCEPATH {{{
     if [ -z "${VCSH_MODULES_SOURCEPATH}" ] ; then
         for t_dirname in \
             ${BASH_SOURCE:+"${BASH_SOURCE%/*}"} \
@@ -116,6 +46,32 @@ if [ ! -f .gitmodules ]; then
     [ -n "${VCSH_MODULES_SOURCEPATH}" ] \
         && export VCSH_MODULES_SOURCEPATH \
         || return 1
+    # }}}
+
+    t_f="${VCSH_MODULES_SOURCEPATH}/vcsh-modules_git-submodule-common.sh"
+    [ -n "${t_f}" ] \
+        && [ -f "${t_f}" -a -r "${t_f}" ] \
+        || return 1
+    . "${t_f}" \
+        || return $?
+
+    # EXEC_PATH, GIT_EXEC_PATH_ORIG, GIT_EXEC_PATH_DEFDIR {{{
+    f_vcsh_gitmodules_run_git --capture-stdout --exec-path \
+        && EXEC_PATH="${g_gitcmd_out_stdout}" \
+        && [ -n "${EXEC_PATH}" ] \
+        || return 1
+
+    : "${GIT_EXEC_PATH_ORIG:=${EXEC_PATH}}" \
+        && [ -n "${GIT_EXEC_PATH_ORIG}" ] \
+        && export GIT_EXEC_PATH_ORIG \
+        || return 1
+
+    : "${GIT_EXEC_PATH_DEFDIR:=${GIT_EXEC_PATH_ORIG##*:}}" \
+        && [ -n "${GIT_EXEC_PATH_DEFDIR}" -a -d "${GIT_EXEC_PATH_DEFDIR}/" ] \
+        && [ -x "${GIT_EXEC_PATH_DEFDIR}/git-submodule" ] \
+        && export GIT_EXEC_PATH_DEFDIR \
+        || return 1
+    # }}}
 
     case ":{begin}:${EXEC_PATH}:{end}:" in
         # matches anywhere: "*:${VCSH_MODULES_SOURCEPATH}:*" )
@@ -127,13 +83,6 @@ if [ ! -f .gitmodules ]; then
             export GIT_EXEC_PATH
             ;;
     esac
-
-    VCSH_MODULES_PATH="${VCSH_MODULES_PATH:-${VCSH_BASE:-$HOME}/.gitmodules.d}" \
-        && [ -n "${VCSH_MODULES_PATH}" ] \
-        && export VCSH_MODULES_PATH \
-        || return 1
-    [ -d "${VCSH_MODULES_PATH}/" ] || mkdir -p "${VCSH_MODULES_PATH}" \
-        || return 1
 fi
 
 # vim600: set filetype=sh fileformat=unix softtabstop=4:
